--- a/WEBApi/appsettings.json
+++ b/WEBApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db.dnqfdamqudurixdbyrkl.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=yuQn2PagUSNUkEiC"
+  },
   "AllowedHosts": "*"
 }
