--- a/WEBApi/appsettings.json
+++ b/WEBApi/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db.dnqfdamqudurixdbyrkl.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=yuQn2PagUSNUkEiC"
+    "DefaultConnection": "User ID=postgres;Password=yuQn2PagUSNUkEiC;Host=db.dnqfdamqudurixdbyrkl.supabase.co;Port=5432;Database=postgres;Pooling=true;Connection Lifetime=0; "
+    //"Server=db.dnqfdamqudurixdbyrkl.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=yuQn2PagUSNUkEiC",
+
   },
   "AllowedHosts": "*"
 }
